adjusted minor layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -273,6 +273,9 @@ table {
 }
 
 .scheduler {
+  .header2-text-label {
+    vertical-align: middle;
+  }
   .friday {
     border-right: 1px dashed #E0E0E0;
   }
